# logiq-agent

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Agent.cpp.0FB26665765F030C.idx  Agent.hpp.574C16D1F4D54198.idx  Config.hpp.69949A5CD9B9A0C8.idx  ConfigLoader.cpp.1D5C2921A9BD1FF6.idx  ConfigLoader.hpp.9E2FDE0E7DBCD07C.idx  HttpNdjsonSink.cpp.D60C5094A1C49D41.idx  HttpNdjsonSink.hpp.293D1EB605F6D012.idx  Logger.cpp.72030E0A24280A97.idx  Logger.hpp.09E54E13D166F98F.idx  Router.cpp.0F57917C3709CDA7.idx  Router.hpp.68B2F98079DC8B3E.idx  Sink.hpp.A934E9519A131ADB.idx  main.cpp.89338B6FD2153EC9.idx
config/: example-config.yaml
src/: main.cpp
src/checkpoint/: CheckpointStore.cpp  CheckpointStore.hpp
src/config/: Config.hpp  ConfigLoader.cpp  ConfigLoader.hpp
src/core/: Agent.cpp  Agent.hpp
src/file/: FileFollower.cpp  FileFollower.hpp  FileIdentity.hpp
src/framing/: LineFramer.cpp  LineFramer.hpp
src/router/: Router.cpp  Router.hpp  RouterExampleUsage.cpp
src/sinks/: HttpNdjsonSink.cpp  HttpNdjsonSink.hpp  Sink.hpp
src/utils/: Logger.cpp  Logger.hpp
